<resources>
    <string name="app_name">IMDB</string>
    <string name="action_settings">Settings</string>
    <string name="movie_title">Movie title</string>
    <string name="search">Search</string>
    <string name="my_movies">My Movies</string>
    <string name="poster">Poster</string>
    <string name="test">he Open Movie Database The OMDb API is a free web service to obtain movie information, all content and images on the site are contributed and maintained by our users. If you find this service useful, please consider donating.</string>
    <string name="title">Title:</string>
    <string name="add">Add to My Movies</string>
    <string name="year">Year:</string>
    <string name="director">Director:</string>
    <string name="actors">Actors:</string>
    <string name="imdb_rating">IMDB Rating:</string>
    <string name="plot">Plot:</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>
