<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MovieActivity"
    tools:showIn="@layout/activity_movie">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/m_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/m_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/m_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>

        <TextView
            android:id="@+id/m_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"/>

        <TextView
            android:id="@+id/m_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actors"/>

        <TextView
            android:id="@+id/m_imdb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imdb_rating"/>

        <TextView
            android:id="@+id/m_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/button_custom"/>


    </LinearLayout>

</ScrollView>

